Fixed z-index issues with nav appearing underneath elements.

--- a/_sass/minima/_nav.scss
+++ b/_sass/minima/_nav.scss
@@ -8,6 +8,7 @@ body.experiments-page {
 	position: fixed;
 	top: 0;
 	width: calc(100vw + 7px);
+	z-index: 2000;
 }
 body.home-page {
 
